--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 javascript for use with the Scriptographer plugin for Adobe Illustrator version <= CS5
-these scripts were developed with help from Alex Blackwood (pxqxbxd [at] gmail.com)
-
+   *some of these scripts were developed with help from Alex Blackwood (pxqxbxd [at] gmail.com)
+   *the transFormEach.js script was created by Shanfan Huang, the visual designer. http://shanfanhuang.com
