--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+scriptographer scripts .js
+==========================
 javascript for use with the Scriptographer plugin for Adobe Illustrator version <= CS5
+   *these are scripts that I find useful for cartography in AI, similar to the ones found [here.](http://kelsocartography.com/blog/?tag=script)
    *some of these scripts were developed with help from Alex Blackwood (pxqxbxd [at] gmail.com)
    *the transFormEach.js script was created by Shanfan Huang, the visual designer. http://shanfanhuang.com
